css/main_dark.css
/* Dark theme */

html {
  background-color: rgba(10, 10, 10, 0.9);
}

body {
  background-color: #222222 !important;
}

.root {
  color: #afafaf !important;
}

.card {
  box-shadow: 0 1px 2px #5e5e5e !important;
  background-color: #1a1a1a !important;
}

img.icon {
  filter: invert(90%);
}

.post pre {
  background-color: #271a26 !important;
  border: 1px solid #354535 !important;
}

.post code {
  background-color: #271a26 !important;
  border: 1px solid #354535 !important;
}

.post pre code {
  background-color: #271a26 !important;
  border: none !important;
}

.post a code {
  background-color: #222 !important;
  border: 1px solid #333 !important;
}

.isso-postbox textarea {
  background-color: #222 !important;
}

.isso-postbox input {
  background-color: #222 !important;
}

a.no-decoration {
  color: #afafaf;
  display: block;
}

a.no-decoration:visited {
  color: #afafaf;
}

a.no-decoration:hover {
  color: #afafaf;
  text-decoration: none;
}

input[type="submit"] {
  color: black;
  filter: invert(90%);
}

